[package]
name = "coinjoin"
version = "0.1.0"

[dependencies]
eng-wasm = "0.1"
eng-wasm-derive = "0.1"
rustc-hex = "2.0"
serde_derive = "1.0"
serde = "1.0"
enigma-crypto = { git = "https://github.com/enigmampc/enigma-core.git", rev = "develop", default-features = false, features = ["asymmetric", "hash"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
