[package]
name = "coinjoin"
version = "0.1.0"
edition = "2018"

[dependencies]
rustc-hex = "2.0"

eng-wasm = "0.1"
eng-wasm-derive = "0.1"
enigma-crypto = { git = "https://github.com/enigmampc/enigma-core.git", rev = "develop", default-features = false, features = ["asymmetric", "hash"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
