[package]
name = "contract"
version = "0.1.0"

[dependencies]
eng-wasm = "0.1.3"
eng-wasm-derive = "0.1.3"
rustc-hex = "2.0.1"
serde_derive = "1.0.84"
serde = "1.0.84"
recrypt = {version = "0.8.1",default-features = false, features = ["wasm"]}


[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
